# pyvd

./: README.md  README.rst  pyproject.toml
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/actions/set-python-and-git/: action.yaml
.github/actions/setup-python-and-git/: action.yaml
.github/workflows/: bump_version.yml  docs_final.yml  docs_preview.yml  publish_pypi.yml  publish_testpypi.yml  run_tests.yml
docs/: README.md  conf.py  index.rst  tutorials.rst
docs/_templates/: footer_start.html
docs/api/: index.rst
docs/api/_autosummary/: pyvd.demog_vd_calc.rst  pyvd.make_fert_dat.rst  pyvd.make_pop_dat.rst
docs/tutorials/: README.rst  tut_sim.ipynb  tut_vd.ipynb
pr-preview/pr-24/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
pr-preview/pr-24/_static/: opensearch.xml
pr-preview/pr-24/api/: index.html
pr-preview/pr-24/api/_autosummary/: pyvd.demog_vd_calc.html  pyvd.make_fert_dat.html  pyvd.make_pop_dat.html
pr-preview/pr-24/tutorials/: README.html  tut_sim.html  tut_sim.ipynb  tut_vd.html  tut_vd.ipynb
pyvd/: __init__.py  base.py  constants.py  version.py  wpp.py
tests/: test_base.py
