[project]
name = "pyvd"
version = "0.3.1"
description = "Calculate birthrate and mortality from WPP data"
authors = [
  { name="Katherine Rosenfeld"},
  { name="Kurt Frey"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
]
license = {file = "LICENSE"}

[tool.bumpversion]
current_version = "0.3.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyvd/version.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
